# fast.platform

./: .coverage  .flake8  LICENSE  README.md  pyproject.toml
scripts/: git_log_recorder.py
src/: abstraction.py  taxonomy.py
src/admin/: __init__.py  abstraction.py  abstractions.py  audit_hooks.py  crud.py  router.py  schemas.py
src/analytics/: __init__.py  base.py  buffer.py  http_sink.py  middleware.py  pii.py  rate_limit.py  schema_registry.py  validating_backend.py
src/cache/: __init__.py  abstraction.py  backend.py
src/channels/: __init__.py  abstraction.py  acl.py  base.py  config_loader.py  heartbeat.py  hub.py  kafka_backend.py  metrics.py  presence.py  redis_backend.py  subscriber_counters.py
src/config/: __init__.py  dto.py  dto_extras.py  loaders.py
src/configuration/: __init__.py  abstraction.py  analytics.py  cache.py  datadog.py  db.py  events.py  feature_flags.py  identity_providers.py  jobs.py  kafka.py  llm.py  notifications.py  payments.py  queues.py  realtime.py  search.py  secrets.py  storage.py  streams.py  telemetry.py  vectors.py
src/core/: __init__.py  abstraction.py
src/data/: abstraction.py
src/datastores/: __init__.py  abstraction.py  cassandra.py  cosmos.py  dynamo.py  elasticsearch.py  interfaces.py  mongo.py  redis_kv.py  scylla.py
src/db/: __init__.py  async_dependency.py  async_engine.py  engine.py  migration_lock.py  replica.py  url.py
src/dtos/: __init__.py  abstraction.py  analytics.py  aws_secrets.py  cache.py  celery_jobs.py  datadog.py  db.py  dramatiq_jobs.py  event_bridge.py  event_hubs.py  events.py  feature_flags.py  feature_flags_snapshot.py  gcp_secrets.py  http_sink.py  identity_providers.py  jobs.py  kafka.py  kafka_event.py  launchdarkly_feature_flags.py  llm.py  meilisearch.py  nats_config.py  notifications.py  oauth_provider.py  payments.py  pinecone_config.py  qdrant_config.py  queues.py  rabbit_mq_config.py  realtime.py  rq_jobs.py  s3_storage.py  scheduler_jobs.py  search.py  secrets.py  service_bus_config.py  sns_notification.py  sqs_config.py  (+9 more)
src/errors/: __init__.py  bad_input_error.py  conflict_error.py  crypto_configuration_error.py  error.py  forbidden_error.py  llm_dependency_error.py  llm_feature_not_available_error.py  not_found_error.py  rate_limit_error.py  service_unavailable_error.py  unauthorized_error.py  unexpected_response_error.py  unsupported_llm_provider_error.py
src/events/: __init__.py  bus.py
src/fast_admin/: audit_hooks.py
src/fast_platform/: __init__.py  abstraction.py  errors.py  taxonomy.py
src/fast_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fast_secrets/: __init__.py  base.py  cache.py  gcp_backend.py  lease.py
src/features/: __init__.py  abstraction.py  base.py  flags.py  kill_switch.py  launchdarkly_client.py  request_context.py  snapshot.py  streaming.py  unleash_client.py
src/identity/: __init__.py  abstraction.py  api_key.py  claims_normalize.py  jwks_cache.py  multi_issuer_jwks.py  providers.py
src/jobs/: __init__.py  cancel.py  celery_app.py  enqueue.py  result.py  schedule.py  timeout.py
src/kafka/: __init__.py  consumer.py  dlq.py  dto.py  idempotent.py  lag.py  outbox.py  producer.py  serde.py
src/llm/: __init__.py  abstraction.py  base.py  budget.py  caching.py  instrumented.py  providers.py  streaming.py  token_usage.py
src/media/: __init__.py  abstraction.py  abstractions.py  generator.py  memory_store.py  pipeline.py  variants.py  virus_scan.py
src/messaging/: __init__.py  abstraction.py
src/notifications/: __init__.py  abstraction.py  config_loader.py  digest.py  dto.py  fanout.py  preferences.py  push.py  retry_policy.py  service.py  templating.py  webhook_retry_compat.py
src/observability/: __init__.py  audit.py  datadog.py  logging.py  metrics.py  otel.py  tracing.py
src/operations/: abstraction.py
src/otel/: __init__.py  abstraction.py  bridge.py
src/payments/: __init__.py  abstraction.py  base.py  config.py  reconciliation.py  sca.py
src/persistence/: __init__.py
src/queues/: __init__.py  broker.py  dlq.py  envelope.py
src/realtime/: abstraction.py
src/resilience/: __init__.py  circuit_breaker.py
src/search/: __init__.py  base.py  bulk.py  dto.py  meilisearch_backend.py  opensearch_backend.py  rollover.py  suggest.py  typesense_backend.py
src/secrets/: __init__.py  aws_backend.py  base.py  gcp_backend.py  vault_backend.py
src/security/: __init__.py  api_keys.py  encryption.py  llm_provider_keys.py  webhooks.py
src/services/: __init__.py  abstraction.py  crypto.py
src/storage/: __init__.py  abstraction.py  azure_backend.py  base.py  gcs_backend.py  local_backend.py  multipart.py  s3_backend.py
src/streams/: __init__.py  abstraction.py  abstractions.py  market.py
src/tenancy/: __init__.py  abstraction.py  middleware.py  resolution.py
src/utils/: __init__.py  abstraction.py  archive.py  clock.py  currency.py  currency_utils.py  decimal.py  decimal_utils.py  digests.py  hashing.py  idempotency.py  metrics.py  nutrition.py  optional_imports.py  request_id_context.py  retry.py  structured_log.py  time.py  time_utils.py
src/vectors/: __init__.py  base.py  names.py  pinecone_backend.py  qdrant_backend.py  weaviate_backend.py
src/versioning/: __init__.py  router.py
src/webhooks/: __init__.py  abstraction.py  fastapi_deps.py  signing.py
src/webrtc/: abstraction.py  config_loader.py  consent.py  dto.py  ice_config.py  signaling.py  turn_twilio.py
tests/: __init__.py  abstraction.py  conftest.py
tests/admin/: test_crud.py  test_init.py  test_public_api.py
tests/analytics/: test_analytics_coverage_gaps.py  test_http_sink_and_base.py  test_init.py  test_middleware.py  test_pii.py  test_public_api.py  test_rate_limit.py  test_schema_buffer_gdpr.py
tests/channels/: __init__.py  test_acl.py  test_backends.py  test_base.py  test_config.py  test_config_loader_extra.py  test_heartbeat.py  test_hub.py  test_hub_metrics_backpressure.py  test_presence.py  test_public_api.py  test_subscriber_counters.py  test_subscriber_counters_redis.py
tests/core/: abstraction.py
(+1159 files in other folders)
